--- a/_toc.yml
+++ b/_toc.yml
@@ -1,12 +1,12 @@
-- file: ../Readme
-- file: ../00-Introduction.ipynb
-- file: ../01-Intro_Pandas_Numpy
-- file: ../02-Numpy_arrays
-- file: ../03-Numpy_maths
-- file: ../04-Numpy_indexing
-- file: ../05-Minimal_plotting
-- file: ../06-Back_to_Pandas
-- file: ../07-Operate_on_DataFrames
-- file: ../08-DataFrame_indexing
-- file: ../09-Pandas_combine
-- file: ../10-Real_world
+- file: Readme
+- file: 00-Introduction.ipynb
+- file: 01-Intro_Pandas_Numpy
+- file: 02-Numpy_arrays
+- file: 03-Numpy_maths
+- file: 04-Numpy_indexing
+- file: 05-Minimal_plotting
+- file: 06-Back_to_Pandas
+- file: 07-Operate_on_DataFrames
+- file: 08-DataFrame_indexing
+- file: 09-Pandas_combine
+- file: 10-Real_world
