--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - ipywidgets
   - pip:
     - plotnine
+    - plotly
     - xlrd
     - ipydatagrid
     - lckr-jupyterlab-variableinspector
