--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Book settings
-title: Introduction to Statistical Data Analysis and Visualization with Python Day 2
+title: Introduction to Data Analysis and Visualization with Python
 author: Guillaume Witz
 #logo: 'logo.png'
 execute:
