--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -14,20 +14,16 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
     
     # Install pip dependencies
     - name: Install dependencies
       run: |
+        $CONDA/bin/pip install pip -U
         $CONDA/bin/pip install -r book/requirements.txt
-
-    # Show packages
-    - name: Show packages
-      run: |
-        $CONDA/bin/conda list
 
     # Build the book
     - name: Build the book
@@ -36,7 +32,7 @@ jobs:
     
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.5.9
+      uses: peaceiris/actions-gh-pages@v3.6.1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_build/html
