add image notebook to toc

--- a/_toc.yml
+++ b/_toc.yml
@@ -6,19 +6,20 @@ chapters:
 - file: 03-Numpy_maths
 - file: 04-Numpy_indexing
 - file: 05-Minimal_plotting
-- file: 06-Back_to_Pandas
-- file: 07-Operate_on_DataFrames
-- file: 08-DataFrame_indexing
-- file: 09-Pandas_combine
-- file: 10-Real_world
-- file: 11-Matplotlib_content
-- file: 12-Matplotlib_non_data_elements
-- file: 13-Seaborn_concept
-- file: 14-Seaborn_distributions_relations
-- file: 15-Seaborn_regression
-- file: 16-Matplotlib_statistics
-- file: 17-Matplotlib_annotations
-- file: 18-Alternatives
-- file: 19-scipy_statsmodels
-- file: 20-scikit-learn
-- file: 21-Image_processing
+- file: 06-Images_as_arrays
+- file: 07-Back_to_Pandas
+- file: 08-Operate_on_DataFrames
+- file: 09-DataFrame_indexing
+- file: 10-Pandas_combine
+- file: 11-Real_world
+- file: 12-Matplotlib_content
+- file: 13-Matplotlib_non_data_elements
+- file: 14-Seaborn_concept
+- file: 15-Seaborn_distributions_relations
+- file: 16-Seaborn_regression
+- file: 17-Matplotlib_statistics
+- file: 18-Matplotlib_annotations
+- file: 19-Alternatives
+- file: 20-scipy_statsmodels
+- file: 21-scikit-learn
+- file: 22-Image_processing
