--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -1,38 +1,47 @@
 name: deploy-book
 
-# Only run this when the master branch changes
-on: [workflow_dispatch]
-  #push:
-  #  branches:
-  #  - master
+# Only run this when the main branch changes
+on:
+  push:
+    branches:
+    - master
+    
+# Sets permissions of the GITHUB_TOKEN to allow deployment to Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-# This job installs dependencies, build the book, and pushes it to `gh-pages`
+# This job installs dependencies, build the book, and pushes it to Pages
 jobs:
   deploy-book:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url}}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    # Install dependencies
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    
-    # Install pip dependencies
-    - name: Install dependencies
-      run: |
-        $CONDA/bin/pip install pip -U
-        $CONDA/bin/pip install -r book/requirements.txt
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-    # Build the book
-    - name: Build the book
-      run: |
-        $CONDA/bin/jupyter-book build .
-    
-    # Push the book's HTML to github-pages
-    - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.6.1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_build/html
+      - name: Install dependencies
+        run: |
+          pip install "jupyter-book<2.0"
+
+      - name: Build the book
+        run: |
+          jupyter-book build .
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '_build/html'
+      
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
